# anki

./: .gitignore  ARCHITECTURE_DIAGRAM.md  BUILD_INSTALLERS.md  CLAUDE.md  CODE_MAP.md  CONTRIBUTORS  Cargo.toml  HUMAN_MADE_Ai_plan.md  PRD.md  README.md  SPECS.md  dummy_account.md  justfile  test_output.txt
anki-decks/: Electromagnetism_CBSE_Class_XII.apkg  Modern_Physics_CBSE_Class_XII.apkg  Physics_-_Particle_Physics.apkg  Physics_-_Waves.apkg  Physics_GRE_Equations.apkg  Physics_Optics_CBSE_Class_XII.apkg  Quantum_Physics_PHYS_214_University_of_Illinois_UIUC.apkg  README.md  Speed_Recall_Formulas.apkg  Thermodynamics.apkg
categorized decks/: 01_Classical_Mechanics.apkg  02_Electromagnetism.apkg  03_Quantum_Mechanics.apkg  04_Atomic_Physics.apkg  05_Thermodynamics_Statistical_Mechanics.apkg  06_Optics_Waves.apkg  07_Specialized_Topics.apkg  08_Special_Relativity.apkg  09_Laboratory_Methods.apkg  README.md
docs/: data-flow.md  index.md  rust-core.md  tech-stack.md
mobile/: build-xcframework.sh
mobile/anki-ffi/: Cargo.toml  cbindgen.toml  lib.rs
physics-gre-solutions/: GR0177.md  GR8677.md  GR9277.md  GR9677.md  README.md
physicsgre-forum-research/: 01-study-workflow.md  02-resources-and-tools.md  03-pain-points.md  04-problems-solutions.md  README.md
rslib/: Cargo.toml
speedrun/: AI_NOTE.md  BASELINE_COMPARISON.md  COMPREHENSIVE_TEST_REPORT.md  CRASH_OFFLINE_SYNC_REPORT.md  FRIDAY_GAPS.md  LARGE_DECK_STRESS_REPORT.md  MANUAL_TEST.md  MODEL_DESCRIPTIONS.md  MVP_TEST_REPORT.md  README.md  RUST_CHANGE.md  SPEEDRUN_COMPLIANCE.md  SYNC.md  TEST_REPORT.md  (+33 more)
(+150 files in other folders)
